Összes java osztály megfelelő mappába került. Kliens oldali kódokra alkalmazva az IDEA kódszépségi javaslati.